# spmv

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  CreateA.cpp  CreateA.h  DistributedVector.cpp  DistributedVector.h  L2GMap.cpp  L2GMap.h  LICENSE  Matrix.cpp  Matrix.h  README.md  README.rst  binaryoutput  cg.cpp  cg.h  cgmain.cpp  cuda_check.h  jacobi.cpp  jacobi.h  jacobimain.cpp  main.cpp  matmultmain.cpp  matvecmain.cpp  mkl_sparsematrix.h  read_petsc.cpp  read_petsc.h  restrictmain.cpp  shuffle_kernel.cu  shuffle_kernel.h  util.cpp  util.h
.devcontainer/: devcontainer.json
.github/workflows/: ccpp.yml
Operator/: CUDA.cpp  CUDA.h  Eigen.h  MKL.cpp  MKL.h  Operator.h
demos/: CMakeLists.txt  CreateA.cpp  CreateA.h  cgmain.cpp  diagonal.cpp  jacobimain.cpp  matvecmain.cpp  petsc_mat_poisson  petsc_vec_poisson  restrictmain.cpp  vecnorm.cpp
doc/: Doxyfile
docker/: Dockerfile
spmv/: CMakeLists.txt  L2GMap.cpp  L2GMap.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  cg.cpp  cg.h  creation.h  jacobi.cpp  jacobi.h  mpi_type.h  read_petsc.cpp  read_petsc.h  shuffle_kernel.h  spmv.h  util.cpp  util.h  utils.h
src/: CMakeLists.txt  Matrix.cpp  cg.cpp
